# dustlab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindLibNoise.cmake  FindOpenCV.cmake  FindSOIL.cmake
docker/: Dockerfile  start.sh
src/: DesertTilesheet.cc  DesertTilesheet.h  DustLab.cc  DustLab.h  GLDefaultProgram.cc  GLDefaultProgram.h  GLProgram.cc  GLProgram.h  GLShader.cc  GLShader.h  Renderable.cc  Renderable.h  SpriteRenderer.cc  SpriteRenderer.h  Spritesheet.cc  Spritesheet.h  Texture.cc  Texture.h  Tilesheet.cc  Tilesheet.h  Transform.cc  Transform.h  WorldGenerator.cc  WorldGenerator.h  main.cpp
src/core/: DustLabRegistry.cc  DustLabRegistry.h  common.cc  common.h
src/ecs/: EntityGenerator.cc  EntityGenerator.h  core.h
src/geometry/: Quad.cc  Quad.h  common.h
src/res/shaders/: default.frag  default.vert
src/test/: CMakeLists.txt  unit_tests.cc
